fix(Harmony): remove unnecessary gap from dropdown trigger

--- a/src/harmony/Dropdown/Dropdown.module.css
+++ b/src/harmony/Dropdown/Dropdown.module.css
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap: 0.125rem;
 
     padding-left: var(--gap-xs);
     padding-right: var(--gap-s);
